--- a/app/views/galleries/show.html.erb
+++ b/app/views/galleries/show.html.erb
@@ -1,2 +1,9 @@
-<h1>Galleries#show</h1>
-<p>Find me in app/views/galleries/show.html.erb</p>
+
+
+
+<% @gallery.photos.each do |photo| %>
+
+    <h1><%= photo.name %></h1>
+    <%= image_tag photo.image if photo.image? %>
+    
+<% end %>
