--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,16 @@
   </head>
 
   <body>
+    <nav>
+      <%= link_to "Home", root_path %>
+      <% if user_signed_in? %>
+        <%= link_to "My Galleries", user_galleries_path %>
+        <%= button_to "Log out", destroy_user_session_path, method: :delete %>
+      <% else %>
+        <%= button_to "Register", new_user_registration_path, method: :get %>
+        <%= button_to "Login", new_user_session_path %>
+      <% end %>
+    </nav>
     <%= yield %>
   </body>
 </html>
