--- a/app/views/galleries/show.html.erb
+++ b/app/views/galleries/show.html.erb
@@ -1,6 +1,10 @@
 
-
-
+<h1><%= @gallery.name %></h1>
+<% if user_signed_in? && current_user == @gallery.user %>
+  <%= link_to "Edit Gallery", edit_gallery_path(@gallery) %>
+  <%= button_to "Delete Gallery", gallery_path(@gallery), method: :delete %>
+  <%= link_to "Add Photo", new_gallery_photo_path(@gallery) %>
+<% end %>
 <% @gallery.photos.each do |photo| %>
 
     <h1><%= photo.name %></h1>
