--- a/app/views/galleries/edit.html.erb
+++ b/app/views/galleries/edit.html.erb
@@ -1,2 +1,4 @@
-<h1>Galleries#edit</h1>
-<p>Find me in app/views/galleries/edit.html.erb</p>
+<h1>Edit Gallery Info</h1>
+
+<%= render "form", gallery: @gallery %>
+<%= link_to "Cancel", user_galleries_path %>
