--- a/app/views/galleries/show.html.erb
+++ b/app/views/galleries/show.html.erb
@@ -17,7 +17,7 @@
       <h2><%= photo.name %></h2>
 
       <%= link_to gallery_photo_path(photo.gallery, photo) do %>
-        <%= image_tag(photo.image.variant(resize_to_limit: [150, 150])) if photo.image.attached? %>
+        <%= image_tag(photo.image.variant(resize_to_limit: [150, 150]), alt: "#{photo.name}") if photo.image.attached? %>
       <% end %>
 
       <% if user_signed_in? && current_user == @gallery.user %>
