--- a/app/views/galleries/new.html.erb
+++ b/app/views/galleries/new.html.erb
@@ -1,4 +1,4 @@
 <h1>Make a new Gallery</h1>
 
 <%= render "form", gallery: @gallery %>
-<%= link_to "Cancel", user_galleries_path %>
+<%= link_to "Cancel", user_galleries_path, class: "btn cancel" %>
