--- a/app/views/galleries/edit.html.erb
+++ b/app/views/galleries/edit.html.erb
@@ -1,4 +1,4 @@
 <h1>Edit Gallery Info</h1>
 
 <%= render "form", gallery: @gallery %>
-<%= link_to "Cancel", user_galleries_path %>
+<%= link_to "Cancel", user_galleries_path, class: "btn cancel"%>
