--- a/app/views/galleries/index.html.erb
+++ b/app/views/galleries/index.html.erb
@@ -1,8 +1,10 @@
 <h1>Galleries</h1>
 <div class="galleries-container">
-    <% @galleries.each do |gallery| %>
+  <% @galleries.each do |gallery| %>
     <div class="gallery-container">
-    <%= link_to gallery.name, gallery %>
+      <h2 class= "gallery-title"><%= gallery.name %> </h2>
+        <p class="gallery-description"><%= gallery.description || "no description" %></p>
+      <%= link_to "View", gallery, class: "btn view-gallery"%>
     </div>
-    <% end %>
+  <% end %>
 </div>
