--- a/app/views/galleries/show.html.erb
+++ b/app/views/galleries/show.html.erb
@@ -5,24 +5,25 @@
 </div>
 
 <% if user_signed_in? && current_user == @gallery.user %>
-  <%= link_to "Edit Gallery Info", edit_gallery_path(@gallery) %>
-  <%= link_to "Add a Photo", new_gallery_photo_path(@gallery) %>
-  <%= button_to "Delete Gallery", gallery_path(@gallery), method: :delete, data: { turbo_confirm: "Are you sure?" } %>
-  
+  <div class= "gallery-actions">
+    <%= link_to "Edit Gallery Info", edit_gallery_path(@gallery), class: "btn"%>
+    <%= link_to "Add a Photo", new_gallery_photo_path(@gallery), class: "btn" %>
+    <%= button_to "Delete Gallery", gallery_path(@gallery), method: :delete, data: { turbo_confirm: "Are you sure?" }, class: "btn" %>
+  </div>
 <% end %>
 
 <div class="photos-container">
   <% @gallery.photos.each do |photo| %>
     <div class="photo-card">
-      <h2><%= photo.name %></h2>
+      <h2 class="photo-name"><%= photo.name %></h2>
 
       <%= link_to gallery_photo_path(photo.gallery, photo) do %>
-        <%= image_tag(photo.image.variant(resize_to_limit: [150, 150]), alt: "#{photo.name}") if photo.image.attached? %>
+        <%= image_tag(photo.image.variant(resize_to_limit: [150, 150]), alt: "#{photo.name}", class: "clickable-img") if photo.image.attached?%>
       <% end %>
 
       <% if user_signed_in? && current_user == @gallery.user %>
-        <%= link_to "Edit Photo", edit_gallery_photo_path(photo.gallery, photo) %>
-        <%= button_to "Delete Photo", gallery_photo_path(photo.gallery, photo), method: :delete, data: { turbo_confirm: "Are you sure?" } %>
+        <%= link_to "Edit Photo", edit_gallery_photo_path(photo.gallery, photo), class: "btn edit-photo"%>
+        <%= button_to "Delete Photo", gallery_photo_path(photo.gallery, photo), method: :delete, data: { turbo_confirm: "Are you sure?" }, class: "btn delete-photo"%>
       <% end %>
     </div>
   <% end %>
