--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,17 +20,25 @@
     <%# Includes all stylesheet files in app/assets/stylesheets %>
     <%= stylesheet_link_tag :app, "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+
+    <!-- including cropper js-->
+    <link href="https://unpkg.com/cropperjs/dist/cropper.min.css" rel="stylesheet">
+    <script src="https://unpkg.com/cropperjs/dist/cropper.min.js"></script>
   </head>
 
   <body>
     <nav>
-      <%= link_to "Home", root_path %>
+      <%= link_to "Home", root_path, class: "btn home"%>
       <% if user_signed_in? %>
-        <%= link_to "My Galleries", user_galleries_path %>
-        <%= button_to "Log out", destroy_user_session_path, method: :delete %>
+        <%= link_to "My Galleries", user_galleries_path, class: "btn my-galleries"%>
+        <div class="nav-right">
+          <%= button_to "Log out", destroy_user_session_path, method: :delete, class: "btn log-out"%>
+        </div>
       <% else %>
-        <%= button_to "Register", new_user_registration_path, method: :get %>
-        <%= button_to "Login", new_user_session_path %>
+        <div class="nav-right">
+          <%= button_to "Register", new_user_registration_path, method: :get, class: "btn register"%>
+          <%= button_to "Login", new_user_session_path, class: "btn login"%>
+        </div>
       <% end %>
     </nav>
     <%= yield %>
